# daily_task_helper_1

./: LICENSE  README.md  dockerfile  pyproject.toml  req.txt  setup.py
daily_task_helper/: AddressBook.py  CaloriesCounter.py  NoteBookByte.py  NoteBookJson.py  Sorter.py  main.py
data/: caloriesdictionary.json  mealaday.json  notebook.json
